# GVSX-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: app.cpp  app.h  main.cpp  pch.h
engine/src/core/: allocator.h  app.cpp  app.h  build_macro.h  data_types.h  logger.cpp  logger.h  macro.h  memory_manager.cpp  memory_manager.h  object.cpp  object.h  stl.cpp  stl.h  system.h
engine/src/input/: keyboard_input.cpp  keyboard_input.h  mouse_input.cpp  mouse_input.h
engine/src/render/: context.cpp  context.h  render_system.cpp  render_system.h  shader_manager.cpp  shader_manager.h
engine/src/render/core/: context.cpp  context.h  shader.cpp  shader.h
engine/src/window/: window_manager.cpp  window_manager.h
